# mev-templates

./: .env.example  .gitignore  README.md  benchmarks.py  ethers-flashbots.rs
contracts/: README.md  foundry.toml
contracts/src/: V2ArbBot.sol  V2Simulator.sol
contracts/src/interface/: IBalancer.sol  IUniswapV2.sol  IWETH.sol
examples/: README.md  ethers-flashbots.rs
javascript/: .cached-pools.csv  benchmarks.js  index.js  package.json
javascript/abi/: V2ArbBot.json
javascript/benches/: .benchmark.csv
javascript/src/: bundler.js  constants.js  multi.js  paths.js  pools.js  simulator.js  strategy.js  streams.js  utils.js
python/: .cached-pools.csv  .env.example  README.md  benchmarks.py  bundler.py  constants.py  main.py  multi.py  paths.py  pools.py  pools_v2.py  relay.py  requirements.txt  simulator.py  streams.py  tracing.py  utils.py
python/abi/: V2ArbBot.json
python/strategy/: dex_3hop_arb_ex.py
rust/: Cargo.toml  README.md
rust/benches/: benchmarks.rs
rust/src/: .cached-pools.csv  bundler.rs  constants.rs  event_handler.rs  evm.rs  lib.rs  main.rs  multi.rs  paths.rs  pools.rs  simulator.rs  strategy.rs  streams.rs  utils.rs
rust/src/abi/: mod.rs
rust/src/strategy/: dex_arb_advanced.rs  dex_arb_base.rs  mod.rs
