[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.1"
rand = "0.8.5"
dotenv = "0.15.0"
hashbrown = "0.14.0"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
log = "0.4.17"
url = "2.3.1"
dashmap = "5.4.0"
hex = "0.4.3"
serde = "1.0.145"
serde_json = "1.0"
anyhow = "1.0.71"
reqwest = "0.11.12"
thiserror = "1.0.37"
futures = "0.3.5"
itertools = "0.11.0"

# EVM based crates
cfmms = "0.6.2"
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots", version = "0.14.0" }
ethers-providers = "2.0"
ethers-core = "2.0"
ethers-contract = { version = "2.0", default-features = false }
ethers = {version = "2.0", features = ["abigen", "ws", "rustls"]}

# logging
indoc = "2"
fern = {version = "0.6.2", features = ["colored"]}
chrono = "0.4.23"
colored = "2.0.0"
csv = "1.2.2"
indicatif = "0.17.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false